fixed small bugs; hero-circle and mic not responsive yet

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,9 +86,9 @@ nav {
     width: 100%;
     /* position: relative; */
     background-image: url(../assets/hero-bg.png);
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center ;
-    background-size: cover;
 }
 .badge{
     max-width: 43px;
@@ -207,6 +207,7 @@ nav {
     align-items: center;
     justify-content: center; */
     /* column-gap: 80px; */
+    display: grid;
     grid-template-columns: repeat(4,1fr);
     text-align: center;
     margin-top: 80px;
